Explanable AI integration for top 2 recommendations using SHAP

--- a/Backend/Notebooks/Risk_Score_Prediction.ipynb
+++ b/Backend/Notebooks/Risk_Score_Prediction.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "cd7d7361",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "# -----------------------------\n",
     "# 2. Load dataset\n",
     "# -----------------------------\n",
-    "data = pd.read_csv(r'D:\\MUFG-Hackathon\\Backend\\Notebooks\\synthetic_insurance_50k.csv')"
+    "data = pd.read_csv(r'D:\\MUFG-Hackathon\\Backend\\Dataset\\synthetic_insurance_50k.csv')"
    ]
   },
   {
