Frontend unnecessary parts removed

--- a/Backend/Notebooks/ExpAI_Integration.ipynb
+++ b/Backend/Notebooks/ExpAI_Integration.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fec102c3",
    "metadata": {},
    "outputs": [
@@ -380,7 +380,7 @@
     "\n",
     "recommendations, explanation = recommend_tier(new_user, top_n=2)\n",
     "\n",
-    "# Print nicely\n",
+    "# Printing the output in a formatted way\n",
     "print(\"Main Recommendation:\")\n",
     "print(f\"- {recommendations[0][0]} (prob={recommendations[0][1]:.2f})\")\n",
     "print(f\"  Explanation: {explanation[0]}\\n\")\n",
